Name:                keter
Version:             1.4.3.2
Synopsis:            Web application deployment manager, focusing on Haskell web frameworks
Description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/keter>.
Homepage:            http://www.yesodweb.com/
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web, Yesod
Build-type:          Simple
Cabal-version:       >=1.8
extra-source-files:  ChangeLog.md
                     README.md

--Data-Files:        incoming/foo/bundle.sh, incoming/foo/config/keter.yaml

flag system-filepath
  description: Use system-filepath
  default: False

Library
  Build-depends:       base                      >= 4             && < 5
                     , directory
                     , bytestring
                     , text
                     , containers
                     , transformers
                     , process
                     , random
                     , data-default
                     , filepath
                     , zlib
                     , network
                     , time
                     , tar                       >= 0.4
                     , template-haskell
                     , blaze-builder             >= 0.3           && < 0.5
                     , yaml                      >= 0.8.4         && < 0.9
                     , unix-compat               >= 0.3           && < 0.5
                     , conduit                   >= 1.1
                     , conduit-extra             >= 1.1
                     , http-reverse-proxy        >= 0.4.2         && < 0.5
                     , unix                      >= 2.5
                     , wai-app-static            >= 3.1           && < 3.2
                     , wai                       >= 3.0           && < 3.3
                     , wai-extra                 >= 3.0.3         && < 3.1
                     , http-types
                     , regex-tdfa                >= 1.1
                     , attoparsec                >= 0.10
                     , http-client
                     , http-conduit              >= 2.1
                     , case-insensitive
                     , array
                     , mtl
                     , warp
                     , warp-tls                  >= 3.0.3
                     , aeson
                     , unordered-containers
                     , vector
                     , stm                       >= 2.4
                     , async
                     , lifted-base
                     , tls                       >= 1.3.4

  if impl(ghc < 7.6)
    build-depends:     ghc-prim
  if flag(system-filepath)
    build-depends:     fsnotify >= 0.1 && < 0.2
                     , system-filepath
    cpp-options:       -DSYSTEM_FILEPATH
  else
    build-depends:     fsnotify >= 0.2.0.2

  Exposed-Modules:     Keter.Plugin.Postgres
                       Keter.Types
                       Keter.Types.V04
                       Keter.Types.V10
                       Keter.Types.Common
                       Keter.Types.Middleware
                       Keter.App
                       Keter.AppManager
                       Keter.LabelMap
                       Keter.Main
                       Keter.PortPool
                       Keter.Proxy
                       Keter.HostManager
                       Network.HTTP.ReverseProxy.Rewrite
                       Data.Yaml.FilePath
                       Codec.Archive.TempTarball
                       Data.Conduit.LogFile
                       Data.Conduit.Process.Unix
  ghc-options:         -Wall
  c-sources:           cbits/process-tracker.c

Executable keter
  Main-is:             keter.hs
  hs-source-dirs:      main
  Build-depends:       base, keter, data-default, filepath
  ghc-options:         -threaded -Wall
  other-modules:       Paths_keter

test-suite test
    hs-source-dirs: test
    main-is: Spec.hs
    type: exitcode-stdio-1.0
    build-depends:   base
                   , transformers
                   , conduit
                   , bytestring
                   , hspec >= 1.3
                   , unix
                   , keter
                   , HUnit
    ghc-options:     -Wall -threaded

source-repository head
  type:     git
  location: https://github.com/snoyberg/keter
